[package]
name = "hellowrold"
version = "0.1.0"
authors = ["Kreijstal <rainb@tfwno.gf>"]
edition = "2018"

[lib]
#crate-type = ["cdylib","static"]A
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#[build]
#target = "thumbv7em-none-eabihf"
